# wr_devkit_navigation

./: .gitignore  README.md  navigation.repos  ros2_packages.sh
.github/workflows/: default.yml  release-github.yml  release.yml
docs/: INSTALLATION.md  RUN.md
src/kits/: README.md
src/kits/base/w200d_sensor_kit_bringup/: README.md  package.xml
src/kits/base/w200d_sensor_kit_bringup/config/: ultrasonic_offsets.param.yaml  w200d.param.yaml
src/kits/base/w200d_sensor_kit_bringup/launch/: sensor_kit.launch.py
src/kits/base/w200d_sensor_kit_bringup/urdf/: sensor_kit.urdf.xacro
src/kits/chassis/ugv_devkit_bringup/: CMakeLists.txt  README.md  package.xml
src/kits/chassis/ugv_devkit_bringup/launch/: chassis.launch.py
src/kits/chassis/ugv_devkit_bringup/meshes/: ugv_devkit_v1.1_chassis_extension_link.stl  ugv_devkit_v1.1_chassis_link.stl
src/kits/chassis/ugv_devkit_bringup/urdf/: chassis.urdf.xacro  chassis_macro.urdf.xacro
src/kits/chassis/ugv_devkit_v1_bringup/: CMakeLists.txt  README.md  package.xml
src/kits/top/mid360_sensor_kit_bringup/: CMakeLists.txt  README.md  package.xml
src/kits/top/perception_sensor_kit_bringup/: CMakeLists.txt  README.md  package.xml
src/kits/top/vision_sensor_kit_bringup/: CMakeLists.txt  README.md  package.xml
src/sensor_kits/base/w200d_sensor_kit_bringup/: CMakeLists.txt  package.xml
src/sensor_kits/top/mid360_sensor_kit_bringup/: README.md  package.xml
src/wr_devkit_bringup/: CMakeLists.txt  README.md  package.xml
src/wr_devkit_bringup/config/: cartographer.lua  nav2_scout_mini_rtab.param.yaml
src/wr_devkit_bringup/launch/: wr_devkit_platform.launch.py
src/wr_devkit_bringup/launch/nav2/: wr_devkit_nav2.launch.py  wr_devkit_nav2_rtab.launch.py
src/wr_devkit_bringup/launch/platform/: wr_devkit_platform.launch.py
src/wr_devkit_bringup/launch/slam/: wr_devkit_cartographer.launch.py
src/wr_devkit_bringup/launch/vslam/: wr_devkit_rtabmap.launch.py
src/wr_devkit_bringup/rviz/: rtabmap.rviz
src/wr_devkit_description/: CMakeLists.txt  package.xml
src/wr_devkit_description/launch/: wr_devkit_description.launch.py  wr_devkit_ultrasonic.launch.py
src/wr_devkit_description/meshes/: wr_devkit_chassis_link.stl
src/wr_devkit_description/urdf/: materials.xacro  mid360_sensorkit.urdf.xacro  wr_devkit.gazebo  wr_devkit.trans  wr_devkit.urdf.xacro  wr_devkit_base.urdf.xacro  wr_devkit_ultrasonic.urdf.xacro
src/wr_devkit_nav_bringup/: CMakeLists.txt  package.xml
src/wr_devkit_nav_bringup/launch/: wr_devkit_cartographer.launch.py  wr_devkit_nav_bringup.launch.py
src/wr_devkit_nav_bringup/params/: nav2_params_ranger_mini.yaml
src/wr_devkit_nav_bringup/rviz/: nav2_default_view.rviz
src/wr_devkit_robot_bringup/: CMakeLists.txt  package.xml
src/wr_devkit_robot_bringup/launch/: mid360.launch.py  wr_devkit_robot_bringup.launch.py  wr_devkit_sensor_bringup.launch.py  wr_devkit_ultrasonic_bringup.launch.py
(+29 files in other folders)
