<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wr_devkit_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hans.kurnia@westonrobot.com">hanskw</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Chassis-->
  <exec_depend>ugv_devkit_v1_bringup</exec_depend>

  <!-- Sensor kits-->
  <exec_depend>w200d_sensor_kit_bringup</exec_depend>
  <exec_depend>mid360_sensor_kit_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
