<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wr_devkit_robot_bringup</name>
  <version>0.1.0</version>
  <description>Robot bringup scripts and configurations for the Weston Robot navigation dev kit</description>
  <maintainer email="matthew.ong@westonrobot.com">Matthew Ong</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>wrp_ros2</depend>
  <depend>ranger_ros2</depend>
  <depend>scout_ros2</depend>
  <depend>wr_devkit_description</depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>